<resources>
    <string name="app_name">Fingerprint</string>
    <string name="title_activity_main">Lock: %1$s &amp; Unlock: %2$s</string>
    <string name="title_activity_login">Connect to My Peugeot</string>
    <string name="title_activity_security_questions">Security Questions</string>
    <string name="set_security_lock">Secure lock screen hasn\'t set up.\nGo to \'Settings -> Security -> ScreenLock\' to set up a lock screen</string>
    <string name="cancel_start_car">Cancel</string>
    <string name="validate_lock_pin">OK</string>
    <string name="cancel_lock_pin">Cancel</string>
    <string name="you_can_start_tv">You can start your car !</string>
    <string name="you_can_not_start_tv">Key not detected !</string>
    <string name="car_start_countdown_min_sec">%1$02d : %2$02d</string>
    <string name="unlock_trunk_title">Unlocking trunk</string>
    <string name="lock_trunk_title">Locking trunk</string>
    <string name="close_all_windows_title">Closing windows</string>
    <string name="header_back_button">header back button</string>
    <string name="connected_over_ble">connected over Bluetooth</string>
    <string name="is_connecting_over_ble">connecting…</string>
    <string name="not_connected_over_ble">disconnected</string>
    <string name="car_model_type">Car Model Type</string>
    <string name="ds5">DS 5 DC-917-NY</string>
    <string name="ds5_2">DS 5 DC-917-NY E1</string>
    <string name="ds5_3">DS 5 EB-967-AK Yagi</string>
    <string name="ds5_4">DS 5 EB-967-AK Yagi E1</string>
    <string name="ds5_5">DS 5 EB-967-AK Vivaldi</string>
    <string name="door_status_bg">door status bg</string>
    <string name="vehicle_locked">Vehicle locked</string>
    <string name="driver_s_door_unlocked">Driver\'s door unlocked</string>
    <string name="vehicle_unlocked">Vehicle unlocked</string>
    <string name="start_button">Start button</string>
    <string name="chessboard">Chessboard</string>
    <string name="rssi_localization">Rssi localization</string>
    <string name="start_measurement_button">Start Measure</string>
    <string name="measure_title_tv">Register rssi for the square n° </string>
    <string name="accuracy_zone_selection">Calculate accuracy for the zone : </string>
    <string name="start_flash">Start flash</string>
    <string name="start_measure">Start measure</string>
    <string name="measuring">Measuring…</string>
    <string name="start_accuracy_measure">Begin accuracy measure</string>
    <string name="stop_accuracy_measure">Stop measure</string>
    <string name="accuracy_zone_result">The %1$s zone accuracy is %2$d %%</string>
    <string name="unlock_trunk">Unlock trunk</string>
    <string name="lock_trunk">Lock trunk</string>
    <string name="close_all_windows">Close all windows</string>
    <string name="flash_lights">Flash lights</string>
    <string name="version_number">Version Number</string>
    <string name="selected_version_number">version :%s</string>
    <string name="tips">\nTIPS</string>
    <string name="icon">icon</string>
    <string name="drag_icon">drag icon</string>
    <string name="control_action">Control action</string>
    <string name="nfc_logo">NFC Logo</string>
    <string name="nfc_disclaimer">You can also access and start your Peugeot by presenting
        this phone to the door\'s handle and next to the start button.</string>
    <string name="blur_on_touch">Blurred View on icon touch</string>
    <string name="dummy_space_view">dummy space view</string>
    <string name="VIN">VF3ATTENTDS180704</string>
    <string name="VIN2">VF3ATTENTDS180705</string>
    <string name="VIN3">VF3ATTENTDS180706</string>
    <string name="VIN4">VF3ATTENTDS180707</string>
    <string name="VIN5">VF3ATTENTDS180708</string>
    <string name="permision_available">permission granted</string>
    <string name="permissions_not_granted">permissions not granted</string>
    <string name="mail">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_account">Create your account</string>
    <string name="not_valid_mail">Not a valid email address!</string>
    <string name="not_valid_password">Not a valid password!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_specific">Specific</string>
    <string name="pref_header_connection">Connection</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_security_questions">Security Questions</string>
    <string name="menu_connect">Connect</string>
    <string name="menu_connect_to_pc">Connect to PC</string>
    <string name="menu_connect_to_remote_control">Connect to Remote Control</string>
    <string name="menu_relaunch_ble_scan">Relaunch Scan</string>
    <string name="pref_car_type">Connected Car Option</string>
    <string name="pref_car_type_title">Car Type</string>
    <string name="pref_opening_orientation_title">Opening strategy</string>
    <string name="pref_select_trame_send_to_car_title">Trame to send to the car</string>
    <string name="pref_threshold_unlock_lock">Threshold Unlock/Lock (meters)</string>
    <string name="pref_car_base_title">Car Base</string>
    <string name="pref_algo_title">Algorithm</string>
    <string name="pref_machine_learning_model">Machine Learning Model</string>
    <string name="pref_is_indoor_enabled">Is Indoor parameter enabled</string>
    <string name="pref_is_indoor_enabled_summary">Enable is Indoor parameter</string>
    <string name="pref_car_forced_trame_enabled">Car forced trame enabled</string>
    <string name="pref_car_forced_trame_enabled_summary">Enable the car forced trame</string>
    <string name="pref_car_forced_trame">Car forced trame</string>
    <string name="pref_com_simulation_enabled">Enable communication simulation</string>
    <string name="pref_com_simulation_enabled_summary">Simulate phone communication</string>
    <string name="pref_is_channel_limited">Ble channel limitation</string>
    <string name="pref_is_calibrated">First run calibration</string>
    <string name="pref_is_channel_limited_summary">Enabled limitation to channel 37</string>
    <string name="pref_is_calibrated_summary">Enabled if calibration has already been done on first run</string>
    <string name="pref_security_wal_enabled">Enable security WAL</string>
    <string name="pref_security_wal_enabled_summary">Activate walk away locking</string>
    <string name="pref_are_beacons_inside">Are beacons inside</string>
    <string name="pref_are_beacons_inside_summary">Are the lateral beacons of the car inside it</string>
    <string name="pref_print_inside_enabled">Enable print inside</string>
    <string name="pref_print_rooftop_enabled">Enable print rooftop</string>
    <string name="pref_is_mini_prediction_used">Use mini prediction</string>
    <string name="pref_print_inside_enabled_summary">Enable the four start zones print</string>
    <string name="pref_print_rooftop_enabled_summary">Enable the rooftop zone print</string>
    <string name="pref_is_mini_prediction_used_summary">Enable the mini prediction</string>
    <string name="dialog_title_list_preference">Number of active beacon</string>
    <string name="base_title_list_preference">Available base type</string>
    <string name="opening_orientation_title_list_preference">Opening strategy</string>
    <string name="algo_title_list_preference">Available Algorithm</string>
    <string name="model_title_list_preference">Available Model</string>
    <string name="pref_near_door">NEAR DOOR THR</string>
    <string name="pref_indoor_ratio_close_to_car_thr">Indoor ratio Close to car Thr</string>
    <string name="pref_outside_ratio_close_to_car_thr">Outside ratio Close to car Thr</string>
    <string name="pref_offset">OFFSET</string>
    <string name="pref_offset_smartphone">Smartphone Offset</string>
    <string name="pref_threshold_lock">Threshold Lock</string>
    <string name="pref_offset_hysteresis_lock">Hysteresis Lock Offset</string>
    <string name="pref_offset_hysteresis_unlock">Hysteresis Unlock Offset</string>
    <string name="pref_prob_standard">Standard Probability Threshold</string>
    <string name="pref_dist_away_standard">Standard Dist Away Threshold</string>
    <string name="pref_offset_ear_start">Start Offset Ear</string>
    <string name="pref_offset_ear_lock">Lock Offset Ear</string>
    <string name="pref_offset_ear_unlock">Unlock Offset Ear</string>
    <string name="pref_offset_pocket_start">Start Offset Pocket</string>
    <string name="pref_offset_pocket_lock">Lock Offset Pocket</string>
    <string name="pref_offset_pocket_unlock">Unlock Offset Pocket</string>
    <string name="pref_threshold">THRESHOLD</string>
    <string name="pref_indoor_threshold_start">Indoor Start Threshold</string>
    <string name="pref_indoor_threshold_unlock">Indoor Unlock Threshold</string>
    <string name="pref_indoor_threshold_lock">Indoor Lock Threshold</string>
    <string name="pref_indoor_threshold_welcome">Indoor Welcome Threshold</string>
    <string name="pref_indoor_threshold_close_to_beacon">Indoor Close to Beacon Threshold</string>
    <string name="pref_indoor_threshold_near_door_ratio">Indoor Near Door Ratio Threshold</string>
    <string name="pref_indoor_threshold_back_door_ratio_min">Indoor Back Door Ratio Min Threshold</string>
    <string name="pref_indoor_threshold_back_door_ratio_max">Indoor Back Door Ratio Max Threshold</string>
    <string name="pref_nb_element">NUMBER OF ELEMENT</string>
    <string name="pref_nb_element_rssi_log_number">Rssi Log Number Element</string>
    <string name="pref_nb_element_rolling_average">Rolling Average Number Element</string>
    <string name="pref_nb_element_start">Start Number Element</string>
    <string name="pref_nb_element_lock">Lock Number Element</string>
    <string name="pref_nb_element_unlock">Unlock Number Element</string>
    <string name="pref_nb_element_welcome">Welcome Number Element</string>
    <string name="pref_nb_element_long">Long Number Element</string>
    <string name="pref_nb_element_short">Short Number Element</string>
    <string name="pref_timeout">TIMEOUT</string>
    <string name="pref_thatcham_timeout">Thatcham Timeout</string>
    <string name="pref_acc">ACCELERATION</string>
    <string name="pref_acc_size">Size Acceleration</string>
    <string name="pref_acc_correction">Correction Acceleration</string>
    <string name="pref_frozen_threshold">Frozen Threshold</string>
    <string name="pref_ble_address">BLE ADDRESS</string>
    <string name="pref_ble_address_connectable">Connectable BLE Address</string>
    <string name="pref_ble_address_front_left">Front left BLE Address</string>
    <string name="pref_ble_address_front_right">Front right BLE Address</string>
    <string name="pref_ble_address_left">Left BLE Address</string>
    <string name="pref_ble_address_middle">Middle BLE Address</string>
    <string name="pref_ble_address_right">Right BLE Address</string>
    <string name="pref_ble_address_trunk">Trunk BLE Address</string>
    <string name="pref_ble_address_rear_left">Rear left BLE Address</string>
    <string name="pref_ble_address_back">Back BLE Address</string>
    <string name="pref_ble_address_rear_right">Rear right BLE Address</string>
    <string name="forgot_password"><u>Forgot password ?</u></string>
    <string name="choice_or"><b>OR</b></string>
    <string name="sign_in_message_alert_yes">Yes</string>
    <string name="sign_in_message_alert_no">No</string>
    <string name="sign_in_message_alert_title"><b>Do you want My Peugeot to keep you logged in ?</b></string>
    <string name="sign_in_message_alert">We recommend you to accept only\nif you password protect your phone.\n
    You can always modify your choice\n in My Peugeot settings.</string>
    <string name="icon_default">car_8</string>
</resources>