<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_car_type">
        <ListPreference
            android:dialogTitle="@string/dialog_title_list_preference"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entry_values_list_preference"
            android:key="com.inblue.PREFERENCE_CONNECTED_CAR_TYPE"
            android:title="@string/pref_car_type_title" />
        <ListPreference
            android:dialogTitle="@string/base_title_list_preference"
            android:entries="@array/base_list_preference"
            android:entryValues="@array/base_entryvalues_list_preference"
            android:key="com.inblue.PREFERENCE_CONNECTED_CAR_BASE"
            android:title="@string/pref_car_base_title" />
    </PreferenceCategory>
</PreferenceScreen>