<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/backgrd">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@mipmap/header_backgrd"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:id="@+id/activity_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/title_activity_login"
            android:textColor="@color/white"
            android:textSize="@dimen/psa_56_px" />
    </android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/logo_psa"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_below="@id/toolbar"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:contentDescription="@string/icon"
        android:src="@mipmap/peugeot_notif_logo" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/mail_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_psa"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/mail_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_til"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        app:errorEnabled="true">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/password_tiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_in"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password_til"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:background="@color/cast_intro_overlay_button_background_color"
        android:text="@string/sign_in"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_in"
        android:layout_marginTop="@dimen/login_forgot_password_margin"
        android:gravity="center"
        android:text="@string/forgot_password" />

    <RelativeLayout
        android:id="@+id/choice_or_rl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/forgot_password"
        android:layout_marginBottom="@dimen/login_or_margin"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:layout_marginTop="@dimen/login_or_margin">

        <TextView
            android:id="@+id/choice_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginStart="@dimen/text_margin"
            android:gravity="center"
            android:text="@string/choice_or" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/choice_or"
            android:background="@color/colorAccent"
            android:gravity="center" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/choice_or"
            android:background="@color/colorAccent"
            android:gravity="center_horizontal" />
    </RelativeLayout>

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choice_or_rl"
        android:layout_marginEnd="@dimen/text_margin"
        android:layout_marginStart="@dimen/text_margin"
        android:background="@color/cast_intro_overlay_button_background_color"
        android:text="@string/create_account"
        android:textColor="@color/white" />
</RelativeLayout>