<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="@dimen/vertical_padding"
        android:text="@string/sign_in_message_alert_title"
        android:textColor="@color/white"
        android:textSize="@dimen/psa_56_px"
        app:layout_constraintBottom_toTopOf="@+id/sign_in_alert_message"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <TextView
        android:id="@+id/sign_in_alert_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="170dp"
        android:gravity="center"
        android:padding="@dimen/vertical_padding"
        android:text="@string/sign_in_message_alert"
        android:textColor="@color/white"
        android:textSize="@dimen/psa_40_px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/textView2"
        app:layout_constraintRight_toRightOf="@id/textView2"
        app:layout_constraintTop_toBottomOf="@id/textView2" />

    <Button
        android:id="@+id/sign_in_message_alert_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/button_border"
        android:padding="@dimen/vertical_padding"
        android:text="@string/sign_in_message_alert_yes"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/sign_in_message_alert_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_border"
        android:padding="@dimen/vertical_padding"
        android:text="@string/sign_in_message_alert_no"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="170dp" />
</android.support.constraint.ConstraintLayout>