<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/accuracy_zone_selection_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/accuracy_zone_selection"
        app:layout_constraintEnd_toStartOf="@+id/accuracy_spinner"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/accuracy_spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/accuracy_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:entries="@array/accuracy_zones"
        android:gravity="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/accuracy_zone_selection_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/accuracy_zone_selection_tv" />

    <Button
        android:id="@+id/start_accuracy_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_green_dark"
        android:text="@string/start_accuracy_measure"
        app:layout_constraintEnd_toStartOf="@+id/stop_accuracy_measure"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accuracy_zone_selection_tv" />

    <Button
        android:id="@+id/stop_accuracy_measure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_dark"
        android:enabled="false"
        android:text="@string/stop_accuracy_measure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_accuracy_measure"
        app:layout_constraintTop_toTopOf="@id/start_accuracy_measure" />

    <TextView
        android:id="@+id/accuracy_zone_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/accuracy_zone_result"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_accuracy_measure" />
</android.support.constraint.ConstraintLayout>